ags (3.8.0)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* implemented volume control of AgsFFPlayer
	* implemented volume control of AgsPitchSampler
	* implemented ags-fx-two-pass-aliase
	* implemented ags_linear_interpolate_util.c
	* implemented ags_hq_pitch_util.c
	* implemented ags_phase_shift_util.c
	* implemented ags_frequency_aliase_util.c
	* improved pitch sampler to use ags-fx-lfo
	* fixed deprecated Gtk+-3.0 symbols
	* fixed reference count in ags_fx_factory.c
	* fixed iteration of AgsChannel in ags_fx_factory.c

ags (3.7.50)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing loop information after map recall

ags (3.7.49)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed missing loop information while machine added

ags (3.7.48)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* updated user's handbook chapter 2 Docbook XML file

ags (3.7.47)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed check object type in ags_sf2_synth_util.c

ags (3.7.46)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed unified floating point types
	* improved safer ags_buffer_util.c
	* improved safer ags_char_buffer_util.c
	* improved safer ags_audio_buffer_util.c
	* improved safer ags_fast_pitch_util.c
	* improved safer ags_filter_util.c
	* improved safer ags_fm_synth_util.c
	* improved safer ags_lfo_synth_util.c
	* improved safer ags_soundcard_util.c
	* improved safer ags_sf2_synth_util.c
	* improved safer ags_sfz_synth_util.c
	* improved safer ags_synth_util.c
	* improved safer ags_osc_buffer_util.c

ags (3.7.45)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* improved safer ags_midi_buffer_util.c

ags (3.7.44)

	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
	* fixed potential SIGSEGV with AgsPluginBrowser no plugin selected
	* fixed ags_lv2_plugin_atom_sequence_remove_midi()
	* fixed ags_fx_eq10_audio_signal_real_run_inter()