@@ -1,5 +1,5 @@
 /* GSequencer - Advanced GTK Sequencer
- * Copyright (C) 2005-2020 Joël Krähemann
+ * Copyright (C) 2005-2021 Joël Krähemann
  *
  * This file is part of GSequencer.
  *
@@ -71,6 +71,9 @@ struct _AgsFMSyncsynth
   AgsRecallContainer *notation_play_container;
   AgsRecallContainer *notation_recall_container;
 
+  AgsRecallContainer *volume_play_container;
+  AgsRecallContainer *volume_recall_container;
+
   AgsRecallContainer *envelope_play_container;
   AgsRecallContainer *envelope_recall_container;
   
@@ -95,6 +98,8 @@ struct _AgsFMSyncsynth
   GtkSpinButton *lower; // how many channels until to lowest freq
   GtkSpinButton *loop_start;
   GtkSpinButton *loop_end;
+
+  GtkScale *volume;
 };
 
 struct _AgsFMSyncsynthClass
